# serializer version: 1
# name: TestOXDNAReading.test_comparing_topologies[top_new]
  list([
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].1
  list([
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].2
  list([
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
    5.0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].3
  list([
    42,
    -1,
    -1,
    42,
    41,
    42,
    41,
    42,
    41,
    40,
    40,
    41,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom]
  list([
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].1
  list([
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].2
  list([
    8.0,
    8.0,
    8.0,
    8.0,
    8.0,
    8.0,
    9.0,
    9.0,
    9.0,
    9.0,
    9.0,
    9.0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].3
  list([
    42,
    -1,
    -1,
    42,
    41,
    42,
    41,
    42,
    41,
    -1,
    40,
    41,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old]
  list([
    list([
      0,
      1,
    ]),
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].1
  list([
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].2
  list([
    1.0,
    1.0,
    1.0,
    1.0,
    1.0,
    1.0,
    2.0,
    2.0,
    2.0,
    2.0,
    2.0,
    2.0,
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].3
  list([
    42,
    41,
    42,
    -1,
    -1,
    42,
    41,
    42,
    41,
    40,
    40,
    41,
  ])
# ---
# name: TestOXDNAReading.test_univ_snapshot
  [[-2.7e-03  3.5e-03  6.1e-03]
   [-2.8e-03  3.7e-03  5.7e-03]
   [-2.8e-03  4.0e-03  5.3e-03]
   [-2.7e-03  4.3e-03  5.0e-03]
   [-2.3e-03  4.6e-03  4.6e-03]
   [-1.9e-03  4.6e-03  4.3e-03]
   [-1.5e-03  4.5e-03  4.0e-03]
   [-1.4e-03  4.4e-03  3.4e-03]
   [-1.4e-03  4.2e-03  3.0e-03]
   [-1.6e-03  4.1e-03  2.5e-03]
   [-1.9e-03  4.2e-03  2.0e-03]
   [-1.6e-03  3.0e-03  9.0e-04]
   [-1.2e-03  2.8e-03  7.2e-04]
   [-7.7e-04  2.8e-03  4.1e-04]
   [-4.2e-04  3.0e-03  8.1e-05]
   [-1.3e-04  3.4e-03 -1.3e-04]
   [ 1.4e-04  3.8e-03 -1.6e-04]
   [ 5.4e-04  4.2e-03 -1.9e-05]
   [ 7.2e-04  4.4e-03  3.7e-04]
   [ 1.1e-03  4.6e-03  7.6e-04]
   [ 1.4e-03  4.5e-03  1.1e-03]
   [ 1.9e-03  4.5e-03  1.2e-03]
   [ 2.1e-03  4.4e-03  5.7e-05]
   [ 1.8e-03  4.0e-03  1.1e-04]
   [ 1.6e-03  3.7e-03  3.2e-04]
   [ 1.2e-03  3.4e-03  5.9e-04]
   [ 7.4e-04  3.4e-03  8.6e-04]
   [ 2.4e-04  3.5e-03  1.0e-03]
   [-1.8e-04  3.7e-03  1.0e-03]
   [-6.2e-04  3.9e-03  8.5e-04]
   [-9.7e-04  4.0e-03  3.9e-04]
   [-1.5e-03  3.8e-03  8.9e-05]
   [-1.7e-03  3.4e-03 -1.7e-04]
   [-2.1e-03  3.0e-03 -2.2e-04]
   [-2.3e-03  2.5e-03 -5.8e-06]
   [-2.7e-03  2.3e-03  3.2e-04]
   [-3.2e-03  2.3e-03  6.7e-04]
   [-3.5e-03  2.5e-03  1.0e-03]
   [-4.0e-03  2.8e-03  1.0e-03]
   [-4.6e-03  2.9e-03  9.7e-04]
   [-5.1e-03  2.9e-03  6.9e-04]
   [-5.4e-03  2.8e-03  3.4e-04]
   [-5.8e-03  2.5e-03  5.3e-05]
   [-6.0e-03  2.0e-03 -1.2e-04]
   [-6.0e-03  2.0e-03  1.1e-03]
   [-5.5e-03  1.8e-03  9.9e-04]
   [-5.1e-03  1.7e-03  7.3e-04]
   [-4.7e-03  1.8e-03  4.0e-04]
   [-4.3e-03  2.1e-03  1.1e-04]
   [-4.1e-03  2.5e-03 -1.5e-04]
   [-3.7e-03  2.9e-03 -2.3e-04]
   [-3.3e-03  3.3e-03 -3.4e-05]
   [-3.0e-03  3.5e-03  3.7e-04]
   [-2.6e-03  3.4e-03  7.2e-04]
   [-2.1e-03  3.2e-03  9.3e-04]
   [-2.1e-03  4.6e-03  1.6e-03]
   [-2.2e-03  5.1e-03  1.4e-03]
   [-2.3e-03  5.5e-03  1.4e-03]
   [-2.1e-03  6.1e-03  1.3e-03]
   [-1.7e-03  6.5e-03  1.2e-03]
   [-1.4e-03  6.7e-03  8.6e-04]
   [-9.9e-04  6.7e-03  5.3e-04]
   [-6.8e-04  6.8e-03  8.2e-05]
   [-6.4e-04  6.8e-03 -4.7e-04]
   [-7.8e-04  6.9e-03 -9.7e-04]
   [-9.4e-04  7.1e-03 -1.4e-03]
   [-1.0e-03  7.6e-03 -1.6e-03]
   [-8.0e-04  8.0e-03 -1.8e-03]
   [-1.6e-03  8.9e-03 -1.9e-03]
   [-1.4e-03  8.2e-03 -2.6e-03]
   [-1.8e-03  8.4e-03 -3.2e-03]
   [-1.4e-03  8.4e-03 -3.1e-03]
   [-9.0e-04  8.3e-03 -2.9e-03]
   [-6.0e-04  8.7e-03 -2.7e-03]
   [-6.2e-04  9.1e-03 -2.5e-03]
   [-5.5e-04  9.3e-03 -2.0e-03]
   [-6.2e-04  7.9e-03 -6.4e-04]
   [-1.0e-03  7.9e-03 -4.1e-04]
   [-1.5e-03  7.5e-03 -3.7e-04]
   [-1.8e-03  7.0e-03 -3.9e-04]
   [-1.8e-03  6.5e-03 -1.8e-04]
   [-1.7e-03  6.0e-03 -3.9e-05]
   [-1.5e-03  5.7e-03  2.3e-04]
   [-1.2e-03  5.6e-03  6.1e-04]
   [-1.1e-03  5.4e-03  1.1e-03]
   [-1.1e-03  5.3e-03  1.6e-03]
   [-1.2e-03  5.2e-03  2.1e-03]
   [-1.5e-03  5.2e-03  2.5e-03]
   [-2.0e-03  5.2e-03  2.8e-03]
   [-2.3e-03  4.9e-03  3.0e-03]
   [-2.6e-03  4.5e-03  3.4e-03]
   [-2.6e-03  4.0e-03  3.7e-03]
   [-2.4e-03  3.6e-03  4.1e-03]
   [-2.1e-03  3.5e-03  4.4e-03]
   [-1.8e-03  3.5e-03  4.8e-03]
   [-1.7e-03  3.7e-03  5.3e-03]
   [-1.7e-03  4.1e-03  5.7e-03]
   [-1.9e-03  4.4e-03  6.1e-03]]
# ---
# name: TestOXDNAReading.test_univ_snapshot.1
  ['C' 'C' 'C' 'A' 'C' 'A' 'C' 'G' 'A' 'G' 'T' 'C' 'C' 'T' 'A' 'A' 'C' 'G'
   'T' 'C' 'C' 'C' 'G' 'G' 'G' 'A' 'C' 'G' 'T' 'T' 'A' 'G' 'G' 'T' 'G' 'A'
   'T' 'A' 'C' 'G' 'T' 'G' 'G' 'G' 'C' 'C' 'C' 'A' 'C' 'G' 'T' 'A' 'T' 'C'
   'A' 'G' 'G' 'C' 'T' 'T' 'A' 'G' 'T' 'C' 'C' 'C' 'T' 'T' 'T' 'T' 'T' 'T'
   'T' 'T' 'T' 'T' 'G' 'G' 'G' 'A' 'C' 'T' 'A' 'A' 'G' 'C' 'C' 'A' 'C' 'T'
   'C' 'G' 'T' 'G' 'T' 'G' 'G' 'G']
# ---
# name: TestOXDNAReading.test_univ_snapshot.2
  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
   25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
   49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
   73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
   97 98]
# ---
# name: TestOXDNAReading.test_univ_snapshot.3
  [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2
   2 2 2 2 2 2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3
   3 3 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4 4]
# ---
